Replace social media fonts

--- a/site.css
+++ b/site.css
@@ -25,6 +25,7 @@ body {
   display: flex;
   justify-content: center;
   border-bottom: 2px solid black;
+  padding: 0.5em 0;
 }
 
 .header__inner-wrapper {
@@ -59,6 +60,10 @@ body {
   text-decoration: none;
 }
 
+.header__nav a:hover {
+  border-bottom: 4px solid #1a64a7;
+}
+
 .header__slimebreaker {
   color: #1a64a7;
 }
@@ -67,17 +72,34 @@ body {
   list-style-type: none;
   display: flex;
   align-items: center;
-  color: blue;
 }
 
 .header__social-nav li {
   padding-left: 16px;
 }
 
+.header__social-nav li:first-child {
+  margin-top: 8px;
+}
+
 .header__social-nav a {
   color: #fefefe;
   text-decoration: none;
-  font-size: 300%;
+}
+
+.header__social-nav i {
+  color: #fefefe;
+  text-decoration: none;
+  font-size: 2.2em;
+  padding-bottom: 8px;
+}
+
+.header__social-nav li:first-child i {
+  padding-bottom: 4px;
+}
+
+.header__social-nav i:hover {
+  border-bottom: 4px solid #1a64a7;
 }
 
 .content {
