--- a/site.css
+++ b/site.css
@@ -19,8 +19,8 @@ body {
   color: #fefefe;
   display: flex;
   justify-content: center;
-  border-bottom: 2px solid black;
-  padding: 0.5em 0;
+  border-bottom: 3px solid black;
+  padding: 0.5em 8px;
 }
 
 .header__inner-wrapper {
