--- a/site.css
+++ b/site.css
@@ -9,7 +9,7 @@ body {
 }
 
 .page_wrapper {
-  background-color: #111;
+  /* background-color: blue; */
   min-height: 1200px;
   display: flex;
   flex-direction: column;
@@ -197,11 +197,12 @@ body {
   display: flex;
   justify-content: center;
   padding-bottom: 50vh;
-  background-color: #222;
+  background-color: #111;
 }
 .content__inner-wrapper {
   flex: 1 1 970px;
   max-width: 970px;
+  background-color: #222;
 }
 
 .content img {
@@ -213,10 +214,32 @@ body {
 .content__body {
   color: #fefefe;
   font-size: 110%;
+  padding: 8px 16px;
 }
 
 .content__blurb {
-  margin-top: 8px;
   font-size: 130%;
   line-height: 1.4;
+  margin-bottom: 16px;
+}
+
+#mc_embed_signup_scroll {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 16px;
+  width: 100%;
+}
+
+#mce-EMAIL {
+  font-size: 150%;
+  padding: 4px;
+  height: 32px;
+  margin-right: 16px;
+}
+
+#mc-embedded-subscribe {
+  font-size: 150%;
+  height: 100%;
+  padding: 0 8px;
+  color: #333;
 }
