--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,6 +6,7 @@
 body {
   font-family: "Lato", sans-serif;
   font-size: 16px;
+  color: #fefefe;
 }
 
 .page_wrapper {
@@ -61,13 +62,14 @@ body {
 .header__nav a {
   color: inherit;
   text-decoration: none;
+  padding-bottom: 4px;
 }
 
 .header__nav a:hover {
   border-bottom: 4px solid #1a64a7;
 }
 
-.header__slimebreaker {
+.header__link--active {
   color: #1a64a7;
 }
 
@@ -111,7 +113,6 @@ body {
   }
 
   .header__inner-wrapper--open {
-    /* display: block; */
     visibility: visible;
   }
 
@@ -194,11 +195,11 @@ body {
   color: #fefefe;
   text-decoration: none;
   font-size: 1.8em;
-  padding-bottom: 8px;
+  padding-bottom: 4px;
 }
 
 .header__social-nav li:first-child i {
-  padding-bottom: 4px;
+  padding-bottom: 0px;
 }
 
 .header__social-nav i:hover {
@@ -208,13 +209,14 @@ body {
 .content {
   display: flex;
   justify-content: center;
-  padding-bottom: 50vh;
-  background-color: #111;
+  background-color: #444;
+  padding-bottom: 16px;
 }
 .content__inner-wrapper {
+  margin-top: 16px;
   flex: 1 1 970px;
   max-width: 970px;
-  background-color: #222;
+  background-color: #292929;
 }
 
 .content img {
@@ -270,4 +272,92 @@ body {
   padding: 0 8px;
   color: #333;
   font-weight: 700;
+}
+
+.footer {
+  color: #fefefe;
+  background-color: #030303;
+  flex: 1 1 100px;
+  text-align: center;
+  padding-top: 48px;
+}
+
+.devlog {
+  color: #fefefe;
+  padding: 16px;
+  padding-bottom: 0;
+
+  &__list {
+    list-style-type: none;
+  }
+
+  &__post {
+    background-color: #1a1a1a;
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: space-between;
+    min-height: 200px;
+  }
+
+  &__post-body {
+    padding: 8px;
+  }
+
+  &__date {
+    background-color: #333;
+    padding: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  &__month_day {
+    font-size: 130%;
+    // flex: 1 1 20px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+  }
+
+  &__year {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__link {
+    color: #fefefe;
+    text-decoration: none;
+  }
+}
+
+.post {
+  padding: 24px;
+
+  &__header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  &__nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 16px;
+    background-color: #444;
+    padding-right: 8px;
+  }
+
+  &__back {
+    color: #fefefe;
+    text-decoration: none;
+    font-size: 150%;
+    margin-right: 8px;
+    background-color: #555;
+    padding: 8px;
+  }
+
+  &__back:hover {
+    background-color: #666;
+  }
 }
