--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,21 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glass Arrow Games | {{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/normalize.css"/>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" type="text/css" href={{"font/flaticon.css" | absolute_url }} />
+    <link rel="stylesheet" href="/assets/css/normalize.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href={{"font/flaticon.css" |
+    absolute_url }} />
   </head>
   <body>
     <div class="page_wrapper">
       <div class="header">
         <div class="header__inner-wrapper" id="menu-body">
           <div class="header__left">
-            <img src="/assets/images/gag_no_text.png" height="40" alt="Glass Arrow Games" />
+            <img
+              src="/assets/images/gag_no_text.png"
+              height="40"
+              alt="Glass Arrow Games"
+            />
             <ul class="header__nav">
-              <li class="header__slimebreaker {% if page.title == 'SlimeBreaker' %}header__link--active{%endif%}">
+              <li
+                class="header__slimebreaker {% if page.title == 'SlimeBreaker' %}header__link--active{%endif%}"
+              >
                 <a href="/"> SlimeBreaker </a>
               </li>
-              <li class="header__devlog {% if page.title != 'SlimeBreaker' %}header__link--active{%endif%}">
+              <li
+                class="header__devlog {% if page.title != 'SlimeBreaker' %}header__link--active{%endif%}"
+              >
                 <a href="/devlog">Devlog</a>
               </li>
             </ul>
@@ -26,7 +35,7 @@
           <div class="header__right">
             <ul class="header__social-nav">
               <li class="header__fb">
-                <a href="test.html">
+                <a href="https://twitter.com/glassarrowgames">
                   <i class="flaticon-043-twitter"></i>
                 </a>
               </li>
@@ -36,12 +45,12 @@
                 </a>
               </li>
               <li class="header__fb">
-                <a href="test.html">
+                <a href="https://www.reddit.com/r/SlimeBreaker/">
                   <i class="flaticon-042-reddit"></i>
                 </a>
               </li>
               <li class="header__fb">
-                <a href="test.html">
+                <a href="https://www.facebook.com/glassarrowgames/">
                   <i class="flaticon-021-facebook"></i>
                 </a>
               </li>
@@ -58,13 +67,9 @@
         </div>
       </div>
       <div class="content">
-        <div class="content__inner-wrapper">
-          {{ content }}
-        </div>
+        <div class="content__inner-wrapper">{{ content }}</div>
       </div>
-      <div class="footer">
-        © 2020 Glass Arrow Games, all rights reserved.
-      </div>
+      <div class="footer">© 2020 Glass Arrow Games, all rights reserved.</div>
     </div>
     <script>
       var open = false;
