--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,15 @@ layout: default
 ---
 
 <div class="post">
-    <div class="post__header">
-        <div class="post__nav">
-            <a href="/devlog" class="post__back">◄</a>
-            <p>{{page.date | date: '%b %m, %Y'}}</p>
-        </div>
-        <h1>{{page.title}}</h1>
+  <div class="post__header">
+    <div class="post__nav">
+      <a href="/devlog" class="post__back">◄</a>
+      <div class="post__meta">
+        <p>{{page.date | date: '%b %m, %Y'}}</p>
+        <p>{{page.author}}</p>
+      </div>
     </div>
-{{content}}
+    <h1>{{page.title}}</h1>
+  </div>
+  <div class="post__body">{{content}}</div>
 </div>
