Add pearce's twitch

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
                 </a>
               </li>
               <li class="header__twitter">
-                <a href="test.html">
+                <a href="https://www.twitch.tv/pearcington">
                   <i class="flaticon-016-twitch"></i>
                 </a>
               </li>
