--- a/_layouts/devlog.html
+++ b/_layouts/devlog.html
@@ -16,12 +16,14 @@ layout: default
         <div class="devlog__post-body">
           <div class="devlog__post-title">{{ post.title}}</div>
           <div class="devlog__post-excerpt">
+            <img src="assets/images/{{post.image}}" alt="haxe logo" />
             {% assign excerptParts = post.excerpt | split: "<!-- excerpt-start -->"
-            %} {{ excerptParts[1] | strip_newlines | truncatewords: 50 }}
+            %} {{ excerptParts[1] | strip_newlines | truncatewords: 40 }}
           </div>
         </div>
         <div class="devlog__meta">
-          <div class="devlog__month_day">{{ post.date | date: '%b %m' }}</div>
+          <div class="devlog__month">{{ post.date | date: '%b' }}</div>
+          <div class="devlog__day">{{ post.date | date: '%m' }}</div>
           <div class="devlog__year">{{ post.date | date: '%Y' }}</div>
           <div class="devlog__author">{{post.author}}</div>
         </div>
